--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
          </fieldset>
 </form>
 
-<script>
+<!--<script>
 $('#form').submit(function(event) {
     var username = $('#username').val();
     var token = $('#token').val();
@@ -45,4 +45,4 @@ $('#form').submit(function(event) {
         }
     })
 });
-</script>
+</script>-->
