working get request

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,6 +11,7 @@
             <br />
             <label for="storeul">Store URL:</label>
             <input type="text" id="storeurl" name="storeurl" placeholder="Enter the store URL"></textarea>
+            <input type="text" if="usrselect" name="usrselect"></textarea>
             <br />
             <input type="submit" value="Submit request" id="submitpost" />
          </fieldset>
