working get requests for images products and categories

--- a/views/sent.hbs
+++ b/views/sent.hbs
@@ -1,6 +1,15 @@
 <h1>Response</h1>
 <ul>
-{{#each .}}
-<li>Category ID: {{id}} Name: {{name}}</li>
+
+{{#each data}}
+{{#if status_id}}
+<li>{{id}} {{status}}</li>
+{{/if}}
+{{#if price}}
+<li>Product ID: {{id}} Name: {{name}} <a href="{{primary_image.zoom_url}}" target="_blank">main image</a></li>
+{{/if}}
+{{#if parent_category_list}}
+<li>{{id}} {{name}} {{layout_file}}</li>
+{{/if}}
 {{/each}}
 </ul>
