adding /put and /get routes

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <p>Image Backup</p>
 
-<form id="form" method="POST" name="formpost" action="/send">
+<form id="form" method="POST" name="formpost" action="/get">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" placeholder="Enter user name">
             <br />
