--- a/views/sent.hbs
+++ b/views/sent.hbs
@@ -5,7 +5,7 @@
 <li>{{id}} {{status}}</li>
 {{/if}}
 {{#if price}}
-<li>Product ID: {{id}} Name: {{name}} <a href="{{primary_image.zoom_url}}" target="_blank">main image</a></li>
+<li>Product ID: {{id}} Name: {{name}} <a href="{{primary_image.zoom_url}}" target="_blank">main image</a> Price: {{price}}</li>
 {{/if}}
 {{#if parent_category_list}}
 <li>{{id}} {{name}} {{layout_file}}</li>
