--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,39 +1,52 @@
 <h1>{{title}}</h1>
-<p>Image Backup</p>
+<p>API</p>
 
 <form id="form" method="POST" name="formpost" action="/get">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" placeholder="Enter user name">
-            <br />
-            <label for="token">Token:</label>
-            <input type="text" id="token" name="token" placeholder="Paste API token">
-            <br />
-            <label for="storeurl">Store URL:</label>
-            <input type="text" id="storeurl" name="storeurl" placeholder="Enter the store URL">
-            <br />
-            <label for="usermethod">Method:</label>
-            <input type="text" id="usermethod" name="usermethod" placeholder="Method">
-            <br />
-            <label for="usertest">Parameters:</label>
-            <input type="text" id="usertest" name="usertest" placeholder="Parameters">
-            <br />
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" class="inputfield visible" placeholder="Enter user name">
+    <br />
+    <label for="token">Token:</label>
+    <input type="text" id="token" name="token" class="inputfield visible" placeholder="Paste API token">
+    <br />
+    <label for="storeurl">Store URL:</label>
+    <input type="text" id="storeurl" name="storeurl" class="inputfield visible" placeholder="Enter the store URL">
+    <br />
+    <input type="text" id="usermethod" name="usermethod" class="inputfield visible" placeholder="Method">
+    <input type="text" id="usertest" name="usertest" class="inputfield visible" placeholder="Parameters">
+    <label for="catname" class="hidden">Category Name:</label>
+    <input type="text" id="catname" name="catname" class="inputfield hidden" placeholder="Category Name">
 
-            <input type="submit" value="Submit">
+    <label for="caturl" class="hidden">Category URL:</label>
+    <input type="text" id="caturl" name="caturl" class="inputfield hidden" placeholder="Category URL">
+
+
+    <input type="submit" value="Submit">
 </form>
 <button id="getallcategories">GET all categories</button>
 <button id="getallorders">GET all orders</button>
 <button id="getallproducts" onclick="">GET all products</button>
+
+<button id="putnewcategory" onclick="">Create new category</button>
+
+
 <script>
-    $('#getallproducts').click(function(){
+    $('#getallproducts').click(function () {
         $('#usermethod').val('GET');
         $('#usertest').val('products');
     });
-    $('#getallorders').click(function(){
+    $('#getallorders').click(function () {
         $('#usermethod').val('GET');
         $('#usertest').val('orders');
     });
-    $('#getallcategories').click(function(){
+    $('#getallcategories').click(function () {
         $('#usermethod').val('GET');
         $('#usertest').val('categories');
+    });
+    $('#putnewcategory').click(function () {
+        $('#form').attr('action', '/post');
+        $('#usermethod').val('POST');
+        $('#usertest').val('categories')
+        $('#catname').toggleClass('hidden');
+        $('#caturl').toggleClass('hidden');
     });
 </script>
