--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,28 +1,48 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding: 50px;
+    font-family: 'Helvetica Neue', Helvetica, sans-serif;
+    -webkit-font-smoothing: subpixel-antialiased;
 }
-
 a {
-  color: #00B7FF;
+    color: #00B7FF;
 }
-
 li {
     border: 2px #EEE solid;
     display: block;
-    float:left;
+    float: left;
     padding: 4px;
     width: 100%;
     margin-bottom: 0.2%;
 }
-
 .hidden {
-    display:none;
+    display: none;
 }
-
 .inputfield.visible {
     margin-bottom: 0.5%;
 }
 #usermethod, #usertest {
-    display:none;
+    display: none;
+}
+.btn {
+    height: 29px;
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: .05556rem;
+    background-color: #4b71fc;
+    border-color: #4b71fc;
+    color: #fff;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 0.2rem;
+    margin: 0 0 1rem;
+}
+.btn:hover {
+    background-color: #6E8DFC;
+    border-color: #6E8DFC;
+}
+.inputfield.visible {
+    margin-bottom: 0.5%;
+    height: 25px;
+    width: 21%;
+    border: 3px solid #EEE;
 }
