--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,35 +3,35 @@
 
 <form id="form" method="POST" name="formpost" action="/get">
     <label for="username">Username:</label>
-    <input type="text" id="username" name="username" class="inputfield visible" placeholder="Enter user name">
+    <input type="text" id="username" name="username" class="inputfield visible" placeholder=" Enter user name">
     <br />
     <label for="token">Token:</label>
-    <input type="text" id="token" name="token" class="inputfield visible" placeholder="Paste API token">
+    <input type="text" id="token" name="token" class="inputfield visible" placeholder=" Paste API token">
     <br />
     <label for="storeurl">Store URL:</label>
-    <input type="text" id="storeurl" name="storeurl" class="inputfield visible" placeholder="Enter the store URL">
+    <input type="text" id="storeurl" name="storeurl" class="inputfield visible" placeholder=" Enter the store URL">
     <br />
-    <input type="text" id="usermethod" name="usermethod" class="inputfield visible" placeholder="Method">
-    <input type="text" id="usertest" name="usertest" class="inputfield visible" placeholder="Parameters">
+    <input type="text" id="usermethod" name="usermethod" class="inputfield visible" placeholder=" Method">
+    <input type="text" id="usertest" name="usertest" class="inputfield visible" placeholder=" Parameters">
 
     <label for="catname" class="hidden">Category Name:</label>
-    <input type="text" id="catname" name="catname" class="inputfield hidden" placeholder="Category Name">
+    <input type="text" id="catname" name="catname" class="inputfield hidden" placeholder=" Category Name">
 
     <label for="caturl" class="hidden">Category URL:</label>
-    <input type="text" id="caturl" name="caturl" class="inputfield hidden" placeholder="Category URL">
+    <input type="text" id="caturl" name="caturl" class="inputfield hidden" placeholder=" Category URL">
 
     <label for="productid" class="prodid hidden">Product ID:</label>
-    <input type="text" id="productid" name="productid" class="prodid inputfield hidden" placeholder="Enter product id">
+    <input type="text" id="productid" name="productid" class="prodid inputfield hidden" placeholder=" Enter product id">
 
 
-    <input type="submit" value="Submit">
+    <input type="submit" class="btn" value="Submit">
 </form>
-<button id="getallcategories">GET all categories</button>
-<button id="getallorders">GET all orders</button>
-<button id="getallproducts" onclick="">GET all products</button>
+<button id="getallcategories" class="btn">GET all categories</button>
+<button id="getallorders" class="btn">GET all orders</button>
+<button id="getallproducts" class="btn">GET all products</button>
 
-<button id="putnewcategory" onclick="">Create new category</button>
-<button id="getallskus" onclick="">GET all SKUs</button>
+<button id="putnewcategory" class="btn">Create new category</button>
+<button id="getallskus" class="btn">GET all SKUs</button>
 
 <div id="dangerzone">
     <p>Danger Zone</p>
