cleaning up js code

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -55,7 +55,7 @@
     $('#putnewcategory').click(function () {
         $('#form').attr('action', '/post');
         $('#usermethod').val('POST');
-        $('#usertest').val('categories')
+        $('#usertest').val('categories');
         $('#catname').toggleClass('hidden');
         $('#caturl').toggleClass('hidden');
     });
