--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <script src="/jquery/jquery.js"></script>
+      <script src="/jquery/jquery.js"></script>
+      <script>
+          $('document').ready(function(){
+            $('.btn').click(function() {
+                $('.btn').not(this).removeClass('active');
+                $(this).toggleClass('active');
+            });
+          });
+      </script>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
